# python_generate_github_page

./: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: github-actions-demo.yml  test-workflow.yml
_modules/: index.html
_modules/dummy_project/: main.html
_sources/: index.rst.txt  table_of_contents.rst.txt
docsrc/module_docs/dummy_project/: main.rst
dummy_project/: main.py
module_docs/dummy_project/: main.html
