[metadata]
name = dummy_project
version = 0.0.1
url = https://github.com/andeaseme/python_generate_github_page
platforms = any
description_file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
root_url = https://github.com/andeaseme
description = Dummy project for testing triggers for CI generating github pages
author = Andie Phan
author_email = asphan@gmail.com
license = Apache Software License
keywords =
		documentation
		publishing
copyright = 2022, Andie Phan
display_name = Dummy Project

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
